--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,13 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Fuel Logger</title>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
   </head>
   <body>
     <div id="app"></div>
-    <script src="index.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
