--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <title>Fuel Logger</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/png" href="/images/favicon.png" />
+    <link rel="icon" type="image/png" href="./images/favicon.png" />
   </head>
   <body>
     <div id="app"></div>
