--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="App.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
